--- a/backend-app/package.json
+++ b/backend-app/package.json
@@ -28,7 +28,8 @@
     "@babel/node": "^7.17.10",
     "@babel/preset-env": "^7.17.10",
     "nodemon": "^2.0.16",
-    "standard": "^17.0.0"
+    "standard": "^17.0.0",
+    "turbo": "^1.2.8"
   },
   "eslintConfig": {
     "extends": "standard"
